# Fragment-Engine

./: .gitignore  FragEngine.hpp  README.md  compile_commands.json  main.cpp  meson.build  projectManager.sh
Engine/Components/: transform.hpp
Engine/Components/Collider/: meson.build
Engine/Components/RigidBody/: meson.build
Engine/Components/Sprite/: meson.build
Engine/Components/Transform/: meson.build
Engine/Core/Entity/: Entity.hpp  meson.build
Engine/Core/Utility/Defines/: Defines.hpp
Engine/Core/Window/: Window.cpp  Window.hpp  meson.build
Engine/Systems/Input/: meson.build
Engine/Systems/Physics/: meson.build
Engine/Systems/Renderer/: Renderer.cpp  Renderer.hpp  meson.build
Engine/Systems/Update/: Update.cpp  Update.hpp  meson.build
scripts/: reconfigure.sh
subprojects/: ECS.wrap  FragLogger.wrap
